# hashTokenRust

./: .gitignore  .npmignore  Cargo.toml  README.md  README_fr.md  README_pt.md  SECURITY_NOTES.md  agents.md  package.json  tsconfig.json
__tests__/: AdvancedTokenManager.test.ts  jwt.test.ts
examples/: manager-integration.ts  sign-verify.ts  with-claims.ts
src/: AdvancedTokenManager.ts  advanced_token_manager.rs  index.ts  jwt.rs  jwt.ts  lib.rs
tests/: advanced_token_manager_test.rs  jwt_test.rs
