[package]
name = "hash_token_rust"
version = "0.1.0"
edition = "2021"
authors = ["Seu Nome <seu_email@example.com>"]
description = "Descrição do que o package faz"
license = "MIT"
repository = "https://github.com/dnettoRaw/hashTokenRust.git"


[dependencies]
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
base64 = "0.21"